--- a/src/styles.css
+++ b/src/styles.css
@@ -190,22 +190,32 @@ input:hover {
   font-size: 16px;
   font-weight: 400;
 }
-.days {
+.forecast-weather-daily {
   margin: 20px;
   margin-bottom: 0;
   border-top: 1px solid #fffeff;
 }
-.day {
+.forecast-weather-day {
   margin: 0 5px;
 }
-.day p {
+.forecast-weather-day p {
   display: block;
   margin: 3px 0px;
   font-size: 20px;
 }
-.day img {
+.forecast-weather-day img {
   display: block;
   margin: 0px -10px;
   width: 50px;
   height: 50px;
 }
+.forecast-temp {
+  font-size: 13px;
+  opacity: 70%;
+  text-transform: uppercase;
+  margin: 0 -8px;
+}
+.forecast-temp .forecast-temp-min{
+  margin-left: 5px;
+}
+
